--- a/2023_2024_2nd_sem_solutions/week4/07_08_sem/CMakeLists.txt
+++ b/2023_2024_2nd_sem_solutions/week4/07_08_sem/CMakeLists.txt
@@ -24,3 +24,4 @@ add_executable(problem3_recursive                problem3_recursive/main.cpp)
 # add_executable(problem8_template                problem8_template/main.cpp)
 # add_executable(problem9_filter                problem9_filter/main.cpp)
 
+# add_executable(07_08_sem               07_08_sem/main.cpp)
